1. Add HOC for AddItemListElement.\n 2. Fixed width on small screens (add overflow-x: hidden to body)

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,12 @@
-body {
-  background-color: aqua;
+html, body {
+  box-sizing: border-box;
   background-image: linear-gradient(to right, #00b4db, #0083b0);
+  margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 
 }
-
+/**
 body::before {
   content: '';
   position: absolute;
@@ -24,6 +27,7 @@ body::before {
     margin-top: 90%;
   }
 }
+*/
 
 .title {
   position: relative;
@@ -34,6 +38,8 @@ body::before {
   font-family: "Gill Sans", sans-serif;
 }
 
+/**
+
 .main_header {
   display: flex;
   padding-left: 20px;
@@ -42,7 +48,7 @@ body::before {
 .main_header > h1 {
   margin-left: 35%;
 }
-
+*/
 .main_header_btn {
   height: 50px;
   width: 50px;
